--- a/app/src/main/res/layout/item_note_produccion.xml
+++ b/app/src/main/res/layout/item_note_produccion.xml
@@ -58,7 +58,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ly_MetrosImpresos"
+                android:id="@+id/iply_MetrosImpresos"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -86,7 +86,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ly_ScrapAjusteProduccion"
+                android:id="@+id/iply_ScrapAjusteProduccion"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -114,7 +114,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ly_ScrapAjusteProduccion_Unidades"
+                android:id="@+id/iply_ScrapAjusteProduccion_Unidades"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -141,7 +141,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ly_RollosFabricdos"
+                android:id="@+id/iply_RollosFabricdos"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -169,7 +169,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ly_RollosEmpaquetados"
+                android:id="@+id/iply_RollosEmpaquetados"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
