--- a/app/src/main/res/layout/dialog_num.xml
+++ b/app/src/main/res/layout/dialog_num.xml
@@ -87,7 +87,8 @@
             android:cursorVisible="true"
             android:ems="10"
             android:inputType="number"
-            android:maxLength="2"
+            android:maxLength="5"
+            android:numeric="integer"
             android:selectAllOnFocus="true"
             android:text="1"
             android:textAlignment="center"
