--- a/app/src/main/res/layout/dialog_scrap.xml
+++ b/app/src/main/res/layout/dialog_scrap.xml
@@ -100,7 +100,8 @@
             android:cursorVisible="true"
             android:ems="10"
             android:inputType="number"
-            android:maxLength="2"
+            android:maxLength="4"
+            android:numeric="decimal"
             android:selectAllOnFocus="true"
             android:text="1"
             android:textAlignment="center"
