--- a/app/src/main/res/layout/item_note_tareas.xml
+++ b/app/src/main/res/layout/item_note_tareas.xml
@@ -41,7 +41,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1.2"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/textView2"
@@ -79,7 +80,7 @@
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="2"
-                    android:text="CONCEPTO"
+                    android:text="Descripciondeltroquel"
                     android:textStyle="bold" />
 
                 <TextView
@@ -90,7 +91,7 @@
                     android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="TextView"
+                    android:text="NO"
                     android:textColor="#F8F5F5"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -109,7 +110,7 @@
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="2"
-                    android:text="CANTIDAD"
+                    android:text="PRODUCIR"
                     android:textStyle="bold" />
 
                 <TextView
@@ -120,7 +121,7 @@
                     android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="1252"
+                    android:text="0"
                     android:textColor="#F8F5F5"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -139,7 +140,7 @@
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="2"
-                    android:text="RESTANTE"
+                    android:text="EN CURSO"
                     android:textStyle="bold" />
 
                 <TextView
@@ -150,7 +151,7 @@
                     android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="25235"
+                    android:text="0"
                     android:textColor="#F8F5F5"
                     android:textSize="34sp"
                     android:textStyle="bold" />
@@ -180,7 +181,7 @@
                     android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="ASDASD ASD ASD ASD ASDAS DAS DASD AAAAAAAAAAAAA"
+                    android:text="NO"
                     android:textColor="#F8F5F5"
                     android:textSize="16sp"
                     android:textStyle="bold" />
