--- a/app/src/main/res/layout/activity_verificacion.xml
+++ b/app/src/main/res/layout/activity_verificacion.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
@@ -17,7 +17,7 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -461,7 +461,7 @@
     <LinearLayout
         android:id="@+id/linearLayoutVerificar"
         android:layout_width="400dp"
-        android:layout_height="267dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_weight="1"
@@ -470,101 +470,176 @@
         app:layout_constraintTop_toBottomOf="@+id/textView17">
 
         <LinearLayout
+            android:id="@+id/ly_uno"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <Switch
-                android:id="@+id/switch5"
+                android:id="@+id/uno"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:switchTextAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:text="VERIFICACION"
+                android:text="control del boceto o muestra contra la impresión de largada"
                 android:textSize="16sp"
                 tools:ignore="TouchTargetSizeCheck" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ly_dos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <Switch
-                android:id="@+id/switch4"
+                android:id="@+id/dos"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="ESPECIFICACIONES OK?"
+                android:text="control de tipo de papel correcto"
                 android:textSize="16sp"
                 tools:ignore="TouchTargetSizeCheck" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ly_tres"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <Switch
-                android:id="@+id/switch3"
+                android:id="@+id/tres"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="ESTADO DE LINER"
+                android:text="Control que el trabajo cumpla con la especificación"
                 android:textSize="16sp"
                 tools:ignore="TouchTargetSizeCheck" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ly_cuatro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <Switch
-                android:id="@+id/switch2"
+                android:id="@+id/cuatro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TROQUELADO"
+                android:text="Control del troquelado y del estado del line"
                 android:textSize="16sp"
                 tools:ignore="TouchTargetSizeCheck" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ly_cinco"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <Switch
-                android:id="@+id/switch1"
+                android:id="@+id/cinco"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="FORMA DE BOBINA"
+                android:text="Control del sentido de bobinado"
                 android:textSize="16sp"
                 tools:ignore="TouchTargetSizeCheck" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ly_seis"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <Switch
-                android:id="@+id/switch6"
+                android:id="@+id/seis"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TIPO PAPEL Y BUJE"
+                android:text="Control para numerados (datos de pie, dirección y numeración)"
                 android:textSize="16sp"
                 tools:ignore="TouchTargetSizeCheck" />
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ly_siete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <Switch
+                android:id="@+id/siete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Control para numerados (armado y control de numeración)"
+                android:textSize="16sp"
+                tools:ignore="TouchTargetSizeCheck" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ly_ocho"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <Switch
+                android:id="@+id/ocho"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Control para largo fijo (largo de ticket)"
+                android:textSize="16sp"
+                tools:ignore="TouchTargetSizeCheck" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ly_nueve"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <Switch
+                android:id="@+id/nueve"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Control tipo de papel y buje"
+                android:textSize="16sp"
+                tools:ignore="TouchTargetSizeCheck" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ly_dies"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <Switch
+                android:id="@+id/dies"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Control del armado de la medida"
+                android:textSize="16sp"
+                tools:ignore="TouchTargetSizeCheck" />
+        </LinearLayout>
+
 
     </LinearLayout>
 
@@ -884,7 +959,7 @@
         android:layout_marginBottom="8dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
-        app:layout_constraintEnd_toEndOf="@+id/textView7"
+        app:layout_constraintEnd_toEndOf="@+id/textView16"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
