--- a/app/src/main/res/layout/dialog_bobina.xml
+++ b/app/src/main/res/layout/dialog_bobina.xml
@@ -43,7 +43,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView39">
 
             <LinearLayout
-                android:id="@+id/lyb_ProveedorNombre"
+                android:id="@+id/lyb_NombreTipoMaterial"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
 
@@ -51,18 +51,19 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView19"
+                    android:id="@+id/textView2312"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="ProveedorNombre"
+                    android:text="NombreTipoMaterial"
                     android:textSize="20sp" />
 
                 <Spinner
-                    android:id="@+id/dialogbobina_spi_ProveedorNombre"
+                    android:id="@+id/dialogbobina_spi_NombreTipoMaterial"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:entries="@array/material"
                     tools:ignore="TouchTargetSizeCheck" />
             </LinearLayout>
 
@@ -128,6 +129,30 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/lyb_ProveedorNombre"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView19"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="ProveedorNombre"
+                    android:textSize="20sp" />
+
+                <Spinner
+                    android:id="@+id/dialogbobina_spi_ProveedorNombre"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    tools:ignore="TouchTargetSizeCheck" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/lyb_DefectuosaKg"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -181,6 +206,11 @@
                     tools:ignore="TouchTargetSizeCheck" />
 
             </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:layout_weight="1" />
 
             <LinearLayout
                 android:id="@+id/ly_trece"
